0032992: Visualization - Font_TextFormatter should wrap words when possible